--- a/style.css
+++ b/style.css
@@ -1,1 +1,46 @@
-/*  Add your styling here */
+
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
+
+body {
+    background: gray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    width: 80%;
+    padding: 3rem;
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    background-color: black;
+  }
+
+.logo {
+        display: inline block;
+        justify-content: space-around;
+        background-color: white;
+        align-items: left;
+        width: 5%;
+        position: fixed;
+        border: solid 3px blue;
+        padding: 4.5rem;
+        margin-left: -8rem; 
+        margin-top: -3.5rem;
+      }
+
+      @media only screen and (max-width: 600px) {
+        body {
+          background-color: lightblue;
+        }
+    }
